# Moving_Taget_Detector

./: CMakeLists.txt  README.md  des.cpp  imageBasics.cpp  move_det.cpp
include/: back_ground.h  ffttools.hpp  getAllFiles.h  move_det.h  select.h
kcf/: getAllFiles.cpp  kcftracker.cpp  output.txt  runtracker.cpp
vie/: BackgroundGMM.cpp  BackgroundGMM.h  VIBE.cpp  VIBE.h  final_BG.cpp  main.cpp  originalVibe.cpp  select.cpp
